Create screen logic to work with game logic, keeping them seperate
Screen logic will only handle DOM/screen tasks, asking game logic to handle
game related tasks.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <script src="script.js"></script>
+    <script
+      src="script.js"
+      defer></script>
+    <link
+      rel="stylesheet"
+      href="./style.css" />
     <title>Odin- Tic Tac Toe</title>
   </head>
   <body>
-    UI to be implemented, play in console for now(F12)
+    <div class="container">
+      <h1>Tic Tac Toe!</h1>
+      <div class="game-container">
+        <h1 class="turn">Player turn</h1>
+        <div class="board"></div>
+      </div>
+    </div>
   </body>
 </html>
